# NeuralEdge

./: Cargo.toml  readme.md
neuraledge-core/: Cargo.toml
neuraledge-core/src/: lib.rs
neuraledge-core/src/backends/: cpu.rs  gpu.rs  graph.rs  mod.rs
neuraledge-core/src/nn/: activations.rs  linear.rs  mod.rs  optimizers.rs
neuraledge-example/: Cargo.toml
neuraledge-example/src/: main.rs
neuraledge-lang/: Cargo.toml
neuraledge-lang/src/: lib.rs
neuraledge-lang/src/tokenizers/: mod.rs  test_data.rs
neuraledge-lang/src/transformers/: components.rs  mod.rs  train.rs  utils.rs
